fix(title): h1 title size is too big for small device

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -36,6 +36,7 @@ html {
 }
 
 @theme {
+  --breakpoint-xs: 25rem;
   --font-display: "Satoshi", "sans-serif";
   --font-heading: "Magilio", "sans-serif";
   --color-background: #f2fcf3;
